--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,20 +4,20 @@
     <!-- -----------------------------------Navbar start----------------------------------- -->
     <nav class="navbar navbar-expand-lg mb-2 fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand text-dark" href="/"><strong>NITT</strong></a>
+        <a class="navbar-brand text-dark" href="{% url 'viewStudentProfile' %}"><strong>NITT</strong></a>
         <button class="navbar-toggler border-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i class="bi bi-list"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="nav ms-auto justify-content-end">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Placement Policy</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="{% url 'contactus' %}">Contact Us</a>
             </li>
           </ul>
 
